--- a/templates/about_page.html
+++ b/templates/about_page.html
@@ -419,12 +419,10 @@
           </div>
 
             {% if request.user.is_authenticated %}
-          <form method="POST" action="">
             {% csrf_token %}
-             <div style="text-align: center;">
-              <button type="submit" onclick="toggleLike(this)" class="like-vehicle" style="align-self: center; width: 20vw" value="{{ vehicle.id }}" name="action">Like it!<i class='bx bxs-bookmark-heart'></i></button>
-            </div>
-          </form>
+              <div style="text-align: center;">
+                <button type="submit" onclick="toggleLike(this)" class="like-vehicle {{ like_vehicle_class }}" style="align-self: center; width: 20vw" value="{{ vehicle.id }}">Like it!<i class='bx bxs-bookmark-heart'></i></button>
+              </div>
             {% endif %}
         </div>
       </div>
@@ -502,14 +500,17 @@
           el.classList.remove("like-vehicle-nonpressed");
           el.classList.add("like-vehicle-pressed");
         }
+        let csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+        $.ajax({
+          data: {vehicle_id: {{ vehicle.id }}},
+          headers: {"X-CSRFToken": csrftoken},
+          url: "{% url 'toggle_like' %}",
+          success: function (response) {},
+          error: function (response) {},
+          type: "POST"
+        });
       }
-      $.ajax({
-        data: {},
-        url: "{% url 'toggle_like' %}",
-        success: function (response) {},
-        error: function (response) {}
-      });
-
+      
         $(document).ready(function(){
           let isWidthSmall = document.body.getBoundingClientRect().width < 700;
 
@@ -533,6 +534,27 @@
           Array.from($(".auto-resize")).forEach(image => {
             adjustHeight(image, 16/9);
           })
+          const map = new ol.Map({
+            view: new ol.View({
+              center: [2339014.595662489, 6841950.467177815],
+              zoom: 9,
+              minZoom: 4,
+              maxZoom: 20,
+            }),
+            layers: [
+              new ol.layer.Tile({
+                source: new ol.source.OSM(),
+              }),
+            ],
+            target: 'js-map',
+          });
+        
+          map.on('click', function (e) {
+            console.log(e.coordinate);
+          });
+        
+          const coordinates = [2339014.595662489, 6841950.467177815]; //выбранные координаты
+          addIconToMap(coordinates, map, markerImagePath);
         });
       </script>
 </body>
