--- a/templates/choose_v_type.html
+++ b/templates/choose_v_type.html
@@ -213,7 +213,7 @@
           <div class="col-md d-flex">
             <div class="card flex-fill">
               <a href="{% url 'catalog' 'spec' %}" class="car-type-link">
-                <img src="images/spec_vehicle.jpeg" class="card-img" alt="">
+                <img src="{% static 'spec.jpg' %}" class="card-img" alt="">
                 <p class="car-type">
                   SPECIALIZED VEHICLES
                 </p>
@@ -224,7 +224,7 @@
           <div class="col-md d-flex">
             <div class="card flex-fill">
               <a href="{% url 'catalog' 'commercial' %}" class="car-type-link">
-                <img src="images/cargo.jpeg" class="card-img" alt="">
+                <img src="{% static 'cargo.jpeg' %}" class="card-img" alt="">
                 <p class="car-type">
                   COMMERCIAL TRANSPORT
                 </p>
@@ -242,7 +242,7 @@
           <div class="col-md d-flex">
             <div class="card flex-fill">
               <a href="{% url 'catalog' 'moto' %}" class="car-type-link">
-                <img src="images/moto.jpeg" class="card-img" alt="">
+                <img src="{% static 'moto.jpg' %}" class="card-img" alt="">
                 <p class="car-type">
                   MOTORCYCLES
                 </p>
@@ -253,7 +253,7 @@
           <div class="col-md d-flex">
             <div class="card flex-fill">
               <a href="{% url 'catalog' 'car' %}" class="car-type-link">
-                <img src="images/car.jpeg" class="card-img" alt="">
+                <img src="{% static 'car.jpg' %}" class="card-img" alt="">
                 <p class="car-type">
                   CARS
                 </p>
@@ -301,9 +301,9 @@
               <span class="devided-text" style="color:#ff6600">US</span>
             </h4>
             <div class="row d-flex flex-row justify-content-center text-center">
-              <a href="#" class="social-media-link"><i class='bx bxl-facebook-square bx-lg' style="color: white;"></i></a>
-              <a href="#" class="social-media-link"><i class='bx bxl-instagram-alt bx-lg' style="color: white;"></i></a>
-              <a href="#" class="social-media-link"><i class='bx bxl-tiktok bx-lg' style="color: white;"></i></a>
+            <a href="https://www.facebook.com/motoex2010" class="social-media-link"><i class='bx bxl-facebook-square bx-lg' style="color: white;"></i></a>
+            <a href="https://www.instagram.com/motoex2010/?igshid=NTc4MTIwNjQ2YQ%3D%3D" class="social-media-link"><i class='bx bxl-instagram-alt bx-lg' style="color: white;"></i></a>
+            <a href="https://www.tiktok.com/@motoex2010" class="social-media-link"><i class='bx bxl-tiktok bx-lg' style="color: white;"></i></a>
             </div>
           </div>
         </div>
