--- a/templates/catalog_page.html
+++ b/templates/catalog_page.html
@@ -143,6 +143,9 @@
       font-size: 2.5vh;
       padding-top: 15px;
     }
+    .col-in-row {
+      margin-bottom: 1vw;
+    }
     .card {
       background: #3a3939;
       padding: 20px 20px 20px 20px;
@@ -215,7 +218,7 @@
     <div class="container-fluid catalog mt-4 px-5">
       <div class="row">
         {% for vehicle in vehicles %}
-        <div class="col-md">
+        <div class="col-4 col-in-row">
           <div class="card">
             <a href="{% url 'about' vehicle.id %}" class="card-link">
               <img src="{{ vehicle.mainimage.image.url }}" alt="car-image" class="card-img">
@@ -267,9 +270,9 @@
             <span class="devided-text" style="color:#ff6600">US</span>
           </h4>
           <div class="row d-flex flex-row justify-content-center text-center">
-            <a href="#" class="social-media-link"><i class='bx bxl-facebook-square bx-lg' style="color: white;"></i></a>
-            <a href="#" class="social-media-link"><i class='bx bxl-instagram-alt bx-lg' style="color: white;"></i></a>
-            <a href="#" class="social-media-link"><i class='bx bxl-tiktok bx-lg' style="color: white;"></i></a>
+            <a href="https://www.facebook.com/motoex2010" class="social-media-link"><i class='bx bxl-facebook-square bx-lg' style="color: white;"></i></a>
+            <a href="https://www.instagram.com/motoex2010/?igshid=NTc4MTIwNjQ2YQ%3D%3D" class="social-media-link"><i class='bx bxl-instagram-alt bx-lg' style="color: white;"></i></a>
+            <a href="https://www.tiktok.com/@motoex2010" class="social-media-link"><i class='bx bxl-tiktok bx-lg' style="color: white;"></i></a>
           </div>
         </div>
       </div>
