--- a/templates/reviews_page.html
+++ b/templates/reviews_page.html
@@ -376,9 +376,9 @@
             <span class="devided-text" style="color:#ff6600">US</span>
           </h4>
           <div class="row d-flex flex-row justify-content-center text-center">
-            <a href="#" class="social-media-link"><i class='bx bxl-facebook-square bx-lg' style="color: white;"></i></a>
-            <a href="#" class="social-media-link"><i class='bx bxl-instagram-alt bx-lg' style="color: white;"></i></a>
-            <a href="#" class="social-media-link"><i class='bx bxl-tiktok bx-lg' style="color: white;"></i></a>
+            <a href="https://www.facebook.com/motoex2010" class="social-media-link"><i class='bx bxl-facebook-square bx-lg' style="color: white;"></i></a>
+            <a href="https://www.instagram.com/motoex2010/?igshid=NTc4MTIwNjQ2YQ%3D%3D" class="social-media-link"><i class='bx bxl-instagram-alt bx-lg' style="color: white;"></i></a>
+            <a href="https://www.tiktok.com/@motoex2010" class="social-media-link"><i class='bx bxl-tiktok bx-lg' style="color: white;"></i></a>
           </div>
         </div>
       </div>
