--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -165,7 +165,7 @@
       </div>
 
       <div class="input-button">
-        <input type="submit" class="submit" style="color: white;" value="Login">
+        <input type="submit" class="submit" style="color: white;" value="Sign Up">
       </div>
     </form>
 
